[gd_scene load_steps=3 format=3 uid="uid://ssue431a37q7"]

[ext_resource type="Script" uid="uid://c7g47ouc7jppt" path="res://Scenes/saves.gd" id="1_gneyv"]
[ext_resource type="Theme" uid="uid://3b6jfloh1m1l" path="res://Resources/black_and_white_theme/black_and_white.tres" id="1_tvaj7"]

[node name="Saves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tvaj7")
script = ExtResource("1_gneyv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot 1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot Button" type="Button" parent="VBoxContainer/Slot 1"]
layout_mode = 2

[node name="Delete Button" type="Button" parent="VBoxContainer/Slot 1"]
layout_mode = 2
text = "Delete Save"

[node name="Slot 2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot Button" type="Button" parent="VBoxContainer/Slot 2"]
layout_mode = 2

[node name="Delete Button" type="Button" parent="VBoxContainer/Slot 2"]
layout_mode = 2
text = "Delete Save"

[node name="Slot 3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot Button" type="Button" parent="VBoxContainer/Slot 3"]
layout_mode = 2

[node name="Delete Button" type="Button" parent="VBoxContainer/Slot 3"]
layout_mode = 2
text = "Delete Save"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ConfirmDialog" type="AcceptDialog" parent="."]

[node name="NameDialog" type="AcceptDialog" parent="."]

[node name="LineEdit" type="LineEdit" parent="NameDialog"]
offset_right = 68.5625
offset_bottom = 31.0

[connection signal="pressed" from="VBoxContainer/Slot 1/Slot Button" to="." method="_on_VBoxContainer_HBoxContainer_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot 1/Delete Button" to="." method="_on_VBoxContainer_HBoxContainer_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot 2/Slot Button" to="." method="_on_VBoxContainer_HBoxContainer2_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot 2/Delete Button" to="." method="_on_VBoxContainer_HBoxContainer2_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot 3/Slot Button" to="." method="_on_VBoxContainer_HBoxContainer3_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Slot 3/Delete Button" to="." method="_on_VBoxContainer_HBoxContainer3_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="confirmed" from="ConfirmDialog" to="." method="_on_confirm_dialog_confirmed"]
[connection signal="confirmed" from="NameDialog" to="." method="_on_name_dialog_confirmed"]
